--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import logo from '../../public/static/logo.svg'
   <div
     class="mx-auto flex max-w-3xl items-center justify-between gap-4 px-4 py-3"
   >
-    <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
+    <Link href="/blog/" class="flex shrink-0 items-center justify-center gap-3">
       <Image src={logo} alt="Logo" class="size-5 sm:size-6" />
       <span class="hidden h-full text-lg font-medium min-[300px]:block"
         >{SITE.title}</span
@@ -22,7 +22,7 @@ import logo from '../../public/static/logo.svg'
         {
           NAV_LINKS.map((item) => (
             <Link
-              href={item.href}
+              href=/blog/{item.href}
               class="text-foreground/60 hover:text-foreground/80 capitalize transition-colors"
             >
               {item.label}
