--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ import logo from '../../public/static/logo.svg'
         {
           NAV_LINKS.map((item) => (
             <Link
-              href=/blog/{item.href}
+              href={item.href}
               class="text-foreground/60 hover:text-foreground/80 capitalize transition-colors"
             >
               {item.label}
