--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,30 +17,10 @@ const projects = await getAllProjects()
     <div class="min-w-full">
       <div class="prose mb-8">
         <p class="mt-0">
-          astro-erudite is an opinionated, unstyled static blogging template
-          that prioritizes simplicity and performance, built with <Link
-            href="https://astro.build"
-            external
-            underline>Astro</Link
-          >, <Link href="https://tailwindcss.com" external underline
-            >Tailwind</Link
-          >, and <Link href="https://ui.shadcn.com" external underline
-            >shadcn/ui</Link
-          >. It provides a clean foundation for your content while being
-          extremely easy to customize.
-        </p>
-        <p>
-          To learn more about the philosophy behind this template, check out the
-          following blog post: <Link
-            href="/blog/the-state-of-static-blogs"
-            underline>The State of Static Blogs in 2024</Link
-          >.
-        </p>
-      </div>
+          This blog is an attempt to organize what is now a diasporic set of documents on my computer. In some sense, I hope that this will serve as a compilation of what might be called my "philosophical project," but I mean that in the broadest possible way -- philosophy not in the narrow imagining of the word we consider common today, but as a more comprehensive worldview. I don't know what that worldview looks like in exact terms, and in many ways it's a moving target (hence the name of this page), but I hope that this website serves to give an insight into how I observe and interpret the world, in whatever capacity that may be interesting to you. 
 
-      <h2 class="mb-4 text-2xl font-medium">Example Projects Listing</h2>
-      <div class="flex flex-col gap-4">
-        {projects.map((project) => <ProjectCard project={project} />)}
+          Thanks for reading, and I do hope you enjoy your time here.
+        </p>
       </div>
     </div>
   </section>
