rename and content

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,8 +17,8 @@ const projects = await getAllProjects()
     <div class="min-w-full">
       <div class="prose mb-8">
         <p class="mt-0">
-          This blog is an attempt to organize what is now a diasporic set of documents on my computer. In some sense, I hope that this will serve as a compilation of what might be called my "philosophical project," but I mean that in the broadest possible way -- philosophy not in the narrow imagining of the word we consider common today, but as a more comprehensive worldview. I don't know what that worldview looks like in exact terms, and in many ways it's a moving target (hence the name of this page), but I hope that this website serves to give an insight into how I observe and interpret the world, in whatever capacity that may be interesting to you. 
-
+          This blog is an attempt to organize what is now a diasporic set of documents on my computer. In some sense, I hope that this will serve as a compilation of what might be called my "philosophical project," but I mean that in the broadest possible way -- philosophy not in the narrow imagining of the word we consider common today, but as a more comprehensive worldview. I don't know what that worldview looks like in exact terms, and in many ways it's a moving target, but I hope that this website serves to give an insight into how I observe and interpret the world, in whatever capacity that may be interesting to you. 
+          &#13;
           Thanks for reading, and I do hope you enjoy your time here.
         </p>
       </div>
