--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
     </ul>
     <div class="flex justify-center">
       <Link
-        href="/blog/blog"
+        href="https://nihalbanand.github.io/blog/blog/"
         class={buttonVariants({ variant: 'ghost' }) + ' group'}
       >
         See all posts <span
