Revert "fix links"
This reverts commit 25db25d3f95ab34739ffa48e7d10ed851a7ef1fb.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
     </ul>
     <div class="flex justify-center">
       <Link
-        href="https://nihalbanand.github.io/blog/blog/"
+        href="/blog/blog"
         class={buttonVariants({ variant: 'ghost' }) + ' group'}
       >
         See all posts <span
