--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -19,7 +19,7 @@ const sortedTags = await getSortedTags()
       {
         sortedTags.map(({ tag, count }) => (
           <Link
-            href={`https://nihalbanand.github.io/blog/tags/${tag}`}
+            href={`/tags/${tag}`}
             class={badgeVariants({ variant: 'secondary' })}
           >
             <Icon name="lucide:hash" class="size-3" />
