--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -27,7 +27,7 @@ const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a))
   <PageHead slot="head" title="Blog" />
   <Breadcrumbs
     items={[
-      { label: 'Blog', href: 'https://nihalbanand.github.io/blog/blog/', icon: 'lucide:library-big' },
+      { label: 'Blog', href: '/blog', icon: 'lucide:library-big' },
       { label: `Page ${page.currentPage}`, icon: 'lucide:book-copy' },
     ]}
   />
@@ -52,7 +52,7 @@ const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a))
   <PaginationComponent
     currentPage={page.currentPage}
     totalPages={page.lastPage}
-    baseUrl="https://nihalbanand.github.io/blog/blog/"
+    baseUrl="/blog/"
     client:load
   />
 </Layout>
