--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -13,7 +13,7 @@ const { href, external, class: className, underline, ...rest } = Astro.props
 ---
 
 <a
-  href={href}
+  href=https://nihalbanand.github.io/blog/{href}
   target={external ? '_blank' : '_self'}
   class={cn(
     'inline-block transition-colors duration-300 ease-in-out',
